Distributed Hestia - Support Many-Many relations

--- a/src/base/models/CMakeLists.txt
+++ b/src/base/models/CMakeLists.txt
@@ -22,6 +22,7 @@ add_module(
         base/LockableModel.cc
         base/OwnableModel.cc
         base/StringAdapter.cc
+        base/RelationshipField.cc
     INTERNAL_INCLUDE_DIRS 
         base
     INTERNAL_DEPENDENCIES
