--- a/test/data/configs/hestia.yaml
+++ b/test/data/configs/hestia.yaml
@@ -16,35 +16,18 @@ server_backends:
   - identifier: hestia::Basic
   - identifier: hestia::Proxygen
 
-object_store_clients:
-  - identifier: hestia::FileHsmObjectStoreClient
-    source: built_in
-    type: hsm
-    root: hsm_object_store
-  - identifier: hestia::FileObjectStoreClient
-    source: built_in
-    type: basic
-    root: object_store
-  - identifier: hestia::S3Client
-    source: plugin
-    type: basic
-    plugin_path: libhestia_s3_plugin
-  - identifier: hestia::PhobosClient
-    source: plugin
-    type: basic
-    plugin_path: libhestia_phobos_plugin
-  - identifier: hestia::mock::MockPhobosClient
-    source: mock
-    type: basic
-    plugin_path: libhestia_mock_phobos_plugin
-  - identifier: hestia::MockMotrClient
-    source: mock
-    type: hsm
-    plugin_path: libhestia_mock_motr_plugin
-  - identifier: hestia::MotrClient
-    source: plugin
-    type: hsm
-    plugin_path: libhestia_motr_plugin
+object_store_backends:
+  - type: file_hsm
+    config:
+      root: hsm_object_store
+  - type: file
+    config:
+      root: object_store
+  - type: s3
+  - type: phobos
+  - type: mock_phobos
+  - type: mock_motr
+  - type: motr
 
 key_value_store:
   client_identifier: hestia::FileKeyValueStoreClient
