--- a/test/data/configs/hestia.yaml
+++ b/test/data/configs/hestia.yaml
@@ -38,13 +38,12 @@ key_value_store_clients:
     config:
       root: key_value_store
 
-tier_registry:
-  - identifier: 0
-    client_identifier: hestia::FileHsmObjectStoreClient
-  - identifier: 1
-    client_identifier: hestia::FileHsmObjectStoreClient
-  - identifier: 2
-    client_identifier: hestia::FileHsmObjectStoreClient
+tiers:
+  - name: "0"
+  - name: "1"
+  - name: "2"
+  - name: "3"
+  - name: "4"
 
 event_feed:
   event_feed_path: event_feed.yaml
