Add support for remote Copy and Move

--- a/test/data/configs/hestia_controller_with_backends.yaml
+++ b/test/data/configs/hestia_controller_with_backends.yaml
@@ -16,3 +16,6 @@ object_store_backends:
     tier_names: ["0", "1", "2", "3", "4"]
     config: 
       root: hsm_object_store_controller0
+
+event_feed:
+  active: true
