Initial Python packaging and fix for Nightly build

--- a/test/integration_tests/CMakeLists.txt
+++ b/test/integration_tests/CMakeLists.txt
@@ -52,8 +52,9 @@ if(${HESTIA_WITH_PHOBOS})
 endif()
 
 if(${HESTIA_WITH_PROXYGEN})
+    add_dependencies(hestia_test_utils libzstd_static)
     target_link_libraries(${INTEGRATION_TEST_MODULE} PRIVATE hestia_proxygen_plugin)
-    target_link_directories(${INTEGRATION_TEST_MODULE} PUBLIC ${zstd_BINARY_DIR})
+    target_link_directories(${INTEGRATION_TEST_MODULE} PUBLIC ${CMAKE_BINARY_DIR}/lib)
     target_include_directories(${INTEGRATION_TEST_MODULE} PUBLIC ${PROJECT_BINARY_DIR})
     target_compile_definitions(${INTEGRATION_TEST_MODULE} PUBLIC HAVE_PROXYGEN)
 endif()
