Systemd Service Updates

--- a/examples/sample_ansible_deploy/inventory/hosts.yml
+++ b/examples/sample_ansible_deploy/inventory/hosts.yml
@@ -9,7 +9,8 @@ controller_group_0:
 
 controllers:
   hosts:
-    ansible-node-1:
+    hestia-controller:
 workers:
   hosts:
-    ansible-node-2: 
+    hestia-worker-phobos:
+    hestia-worker-motr: 
