--- a/infra/cmake/hestiad.service.in
+++ b/infra/cmake/hestiad.service.in
@@ -2,10 +2,13 @@
 Description=The Hestia HSM Server
 After=network.target
 Wants=redis.service
+StartLimitIntervalSec=60
+StartLimitBurst=10
 
 [Service]
 Type=simple
-ExecStart=@CMAKE_INSTALL_PREFIX@/bin/hestia server --config=/etc/hestia/hestiad.yml
+ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/hestia server --config=@CMAKE_INSTALL_FULL_SYSCONFDIR@/hestia/hestiad.yaml
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
