--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,11 @@ stages:
     CMAKE_BUILD_TYPE: "Release"
     CXX: "g++"
     CC: "gcc"
+    ENABLE_SANITIZERS: "ON"
     CMAKE_EXPORT_COMPILE_COMMANDS: "ON"
     HESTIA_PROJECT_VERSION: "${CI_NIGHTLY_VERSION}"
     HESTIA_BUILD_TESTS: "OFF"
-    HESTIA_BUILD_DOCUMENTATION: "OFF"
+    HESTIA_BUILD_DOCUMENTATION: "ON"
     HESTIA_CODE_COVERAGE: "OFF"
     HESTIA_WITH_PHOBOS: "OFF"
     HESTIA_WITH_MOTR: "OFF"
@@ -57,6 +58,7 @@ stages:
       -DBUILD_SHARED_LIBS=OFF
       -DCMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}"
       -DCMAKE_EXPORT_COMPILE_COMMANDS="${CMAKE_EXPORT_COMPILE_COMMANDS}"
+      -DCMAKE_C_COMPILER="${CC}"
       -DCMAKE_CXX_COMPILER="${CXX}"
       -DCMAKE_PROJECT_VERSION="${HESTIA_PROJECT_VERSION}"
       -DHESTIA_BUILD_TESTS="${HESTIA_BUILD_TESTS}"
@@ -66,6 +68,7 @@ stages:
       -DHESTIA_WITH_PROXYGEN="${HESTIA_WITH_PROXYGEN}"
       -DHESTIA_WITH_PHOBOS="${HESTIA_WITH_PHOBOS}"
       -DHESTIA_WITH_MOTR="${HESTIA_WITH_MOTR}"
+      -DHESTIA_ENABLE_SANITIZERS="${ENABLE_SANITIZERS}"
       -DMOTR_SRC_DIR="${MOTR_SRC_DIR}"
     )
     && popd
@@ -73,6 +76,10 @@ stages:
     make -C "${CMAKE_BUILD_DIR}" -j$(nproc)
   - &test
     make -C "${CMAKE_BUILD_DIR}" CTEST_OUTPUT_ON_FAILURE=1 test -j$(nproc)
+  - &generate_docs
+    tar -czvf ${CMAKE_BUILD_DIR}/docs.tar.gz --directory=${CMAKE_BUILD_DIR}/doc html
+  - &zip_coverage
+    tar -czvf ${CMAKE_BUILD_DIR}/Code_coverage_report.tar.gz --directory=${CMAKE_BUILD_DIR}/ccov all-merged
 
 .cache:
   cmake_install_cache: &cmake_install_cache
@@ -158,10 +165,12 @@ Release:
     - make -C "${CMAKE_BUILD_DIR}" package
     - $CMAKE_INSTALL_CACHE_DIR/bin/cmake -DHESTIA_USE_SRC_RPM_SPEC=ON ${CMAKE_BUILD_DIR}
     - make -C "${CMAKE_BUILD_DIR}" package_source
+    - *generate_docs
   artifacts:
     name: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
     paths:
       - ${CMAKE_BUILD_DIR}/*.rpm
+      - ${CMAKE_BUILD_DIR}/*.tar.gz
     expire_in: 1 day
 
 Unit_test:
@@ -175,7 +184,6 @@ Unit_test:
     CXX: "clang++"
     CC: "clang"
     HESTIA_BUILD_TESTS: "ON"
-    HESTIA_CODE_COVERAGE: "ON"
     HESTIA_TEST_REDIS: "ON"
   before_script:
     - *update_distro
@@ -186,8 +194,6 @@ Unit_test:
     - *build
     - redis-server&
     - *test
-#    - make -C "${CMAKE_BUILD_DIR}" ccov-hestia_unit_tests
-#    - make -C "${CMAKE_BUILD_DIR}" ccov-report-hestia_unit_test
 
 E2E_test:
   <<: *default_job
@@ -208,6 +214,7 @@ E2E_test:
     ${CI_PROJECT_DIR}/infra/scripts/ci/install_motr.sh
   - &install_proxygen
     yum install -qy $(cat ${HESTIA_DEPS}/proxygen);
+
 
 .default_nightly_job: &default_nightly_job
   <<: *default_job
@@ -230,6 +237,8 @@ E2E_test:
     - make -C "${CMAKE_BUILD_DIR}" package
     - $CMAKE_INSTALL_CACHE_DIR/bin/cmake -DHESTIA_USE_SRC_RPM_SPEC=ON ${CMAKE_BUILD_DIR}
     - make -C "${CMAKE_BUILD_DIR}" package_source
+    - make -C "${CMAKE_BUILD_DIR}" doxygen
+    - *generate_docs
     # TODO: Build and upload docs
 
 Nightly_build:
@@ -279,6 +288,40 @@ Nightly_E2E:
     - python3 ${CI_PROJECT_DIR}/test/e2e_tests/run_e2e_tests.py
       --source_dir=${CI_PROJECT_DIR} --build_dir=${CMAKE_BUILD_DIR}
       --package_name=${CMAKE_BUILD_DIR}/hestia-${HESTIA_PROJECT_VERSION}-1.x86_64.rpm
+
+Nightly_code_coverage:
+  <<: *default_nightly_job
+  stage: test
+  dependencies:
+    - Release
+  variables:
+    <<: *nightly_variables
+    CMAKE_BUILD_TYPE: "Debug"
+    CXX: "clang++"
+    CC: "clang"
+    HESTIA_BUILD_TESTS: "ON"
+    HESTIA_CODE_COVERAGE: "ON"
+    HESTIA_TEST_REDIS: "ON"
+    ENABLE_SANITIZERS: "OFF"
+    HESTIA_BUILD_DOCUMENTATION: "OFF"
+    HESTIA_WITH_PHOBOS: "OFF" #no need for backends for test coverage
+    HESTIA_WITH_MOTR: "OFF"
+    HESTIA_WITH_PROXYGEN: "OFF"
+  before_script:
+    - *update_distro
+    - *install_base_dependencies
+    - yum install -qy $(cat ${HESTIA_DEPS}/test)
+  script:
+    - *configure
+    - *build
+    - redis-server&
+    - make -C "${CMAKE_BUILD_DIR}" ccov-all
+    - *zip_coverage
+  artifacts:
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
+    paths:
+      - ${CMAKE_BUILD_DIR}/*.tar.gz
+    expire_in: 1 day
 
 Nightly_deploy:
   <<: *default_nightly_job
