--- a/examples/sample_ansible_deploy/inventory/hosts.yml
+++ b/examples/sample_ansible_deploy/inventory/hosts.yml
@@ -10,7 +10,16 @@ controller_group_0:
 controllers:
   hosts:
     hestia-controller:
+
 workers:
+  children:
+    motr:
+    phobos:
+
+motr-workers:
+  hosts:
+    hestia-worker-motr: 
+
+phobos-workers:
   hosts:
     hestia-worker-phobos:
-    hestia-worker-motr: 
