--- a/infra/ansible/roles/hestia_common/tasks/main.yml
+++ b/infra/ansible/roles/hestia_common/tasks/main.yml
@@ -11,12 +11,6 @@
     name: hestia
     state: latest
 
-- name: Create Hestia config directiory if it does not exist
-  ansible.builtin.file:
-    path: "{{ hestia_config_dir }}"
-    state: directory
-    mode: '0700'
-
 - name: Reload systemd
-  ansible.builtin.systemd
+  ansible.builtin.systemd:
     daemon_reload: true # Ensure our hestia service unit is loaded
