--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -205,8 +205,11 @@ E2E_test:
     - yum install -qy $(cat ${HESTIA_DEPS}/e2e_test);
     - pip3 install -r ${CI_PROJECT_DIR}/test/e2e_tests/requirements.txt;
   script:
-    - python3 ${CI_PROJECT_DIR}/test/e2e_tests/run_e2e_tests.py --source_dir=${CI_PROJECT_DIR}
-      --build_dir=${CMAKE_BUILD_DIR} --package_name=${CMAKE_BUILD_DIR}/hestia-${HESTIA_PROJECT_VERSION}-1.x86_64.rpm
+    - python3 ${CI_PROJECT_DIR}/test/e2e_tests/run_e2e_tests.py 
+      --source_dir=${CI_PROJECT_DIR}
+      --build_dir=${CMAKE_BUILD_DIR} 
+      --package_name=${CMAKE_BUILD_DIR}/hestia-${HESTIA_PROJECT_VERSION}-1.x86_64.rpm
+      --devel_package_name=${CMAKE_BUILD_DIR}/hestia-devel-${HESTIA_PROJECT_VERSION}-1.x86_64.rpm
 
 # Scheduled Builds
 .nightly_snippets:
@@ -286,8 +289,10 @@ Nightly_E2E:
     - pip3 install -r ${CI_PROJECT_DIR}/test/e2e_tests/requirements.txt;
   script:
     - python3 ${CI_PROJECT_DIR}/test/e2e_tests/run_e2e_tests.py
-      --source_dir=${CI_PROJECT_DIR} --build_dir=${CMAKE_BUILD_DIR}
+      --source_dir=${CI_PROJECT_DIR}
+      --build_dir=${CMAKE_BUILD_DIR} 
       --package_name=${CMAKE_BUILD_DIR}/hestia-${HESTIA_PROJECT_VERSION}-1.x86_64.rpm
+      --devel_package_name=${CMAKE_BUILD_DIR}/hestia-devel-${HESTIA_PROJECT_VERSION}-1.x86_64.rpm
 
 Nightly_code_coverage:
   <<: *default_nightly_job
