--- a/examples/sample_autotools_app/Makefile.am
+++ b/examples/sample_autotools_app/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS = hestia_sample_app
-hestia_sample_app_SOURCES = src/main.cc
+hestia_sample_app_SOURCES = src/main.c
 hestia_sample_app_CPPFLAGS = $(HESTIA_CFLAGS)
 hestia_sample_app_LDFLAGS= $(HESTIA_LIBS)
