--- a/examples/sample_autotools_app/configure.ac
+++ b/examples/sample_autotools_app/configure.ac
@@ -1,11 +1,10 @@
 AC_INIT([hestia_sample_app], [0.0.1], [maintainer@example.com])
 
 AC_CONFIG_AUX_DIR([autotools])
-AC_CONFIG_SRCDIR([src/main.cc])
+AC_CONFIG_SRCDIR([src/main.c])
 
 AM_INIT_AUTOMAKE([subdir-objects])
 AC_PROG_CC
-AC_PROG_CXX
 
 PKG_CHECK_MODULES(HESTIA, [hestia])
 AC_SUBST(HESTIA_LIBS)
