--- a/test/data/configs/hestia.yaml
+++ b/test/data/configs/hestia.yaml
@@ -1,6 +1,6 @@
 server:
-  host_address: 127.0.0.1
-  host_port: 8080
+  host: 127.0.0.1
+  port: 8080
   web_app: hestia::HsmService
   backend: hestia::Basic
   controller: true
