--- a/test/data/configs/s3_client.yaml
+++ b/test/data/configs/s3_client.yaml
@@ -2,7 +2,9 @@ object_store_backends:
   - backend_type: s3
     tier_names: ["0"]
     config:
-      default_host: "http://127.0.0.1:9000"
+      default_host: "127.0.0.1:9000"
+      s3_access_key_id: "admin"
+      m_s3_secret_access_key_var: "HESTIA_S3_SECRET_KEY"
 
 tiers:
   - name: "0"
